--- a/PI_ML/Frontend/src/index.html
+++ b/PI_ML/Frontend/src/index.html
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Argentina Programa
-  </title>
+  <title>PIML</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/src/assets/ico/Alambre - circulo - ico.ico">
+  <link rel="stylesheet" href="/src/styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
-  <app-root>
-  </app-root>
+  <app-root></app-root>
 </body>
 
 </html>
